--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ce04366f",
+   "id": "7b0c340a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e915188",
+   "id": "b1bbe58d",
    "metadata": {},
    "source": [
     "# 1. Explore the data (German credit dataset)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5680232b",
+   "id": "e22e4c55",
    "metadata": {},
    "source": [
     "### 1.1 Display data"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2076bf14",
+   "id": "f4c2460f",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5f50661e",
+   "id": "05f67cd6",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "287e620e",
+   "id": "2f519f06",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c8495539",
+   "id": "2e01c7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d35f0f",
+   "id": "985d0c5a",
    "metadata": {},
    "source": [
     "### 1.2 Replace the missing data"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0049ae3d",
+   "id": "3cbf1618",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d26299",
+   "id": "1dc91a2e",
    "metadata": {},
    "source": [
     "### 1.3 Change the values of categorical variables"
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b1a2a21",
+   "id": "64d387a0",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eff5e26",
+   "id": "58229c68",
    "metadata": {},
    "source": [
     "### 1.4 Find outliers\n",
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "22377655",
+   "id": "d7858ff5",
    "metadata": {},
    "outputs": [
     {
@@ -971,16 +971,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd78d43",
+   "id": "d151bc48",
    "metadata": {},
    "source": [
-    "### 1.5 Save new data for the processing"
+    "### 1.5 Save new data for the preprocessing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3198c362",
+   "id": "34fe1cec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14430c1",
+   "id": "c2e5cece",
    "metadata": {},
    "outputs": [],
    "source": []
